renaming isotope.css to resultList.css, disable sorting

--- a/visualization-widgets/SearchResultListVis/index.html
+++ b/visualization-widgets/SearchResultListVis/index.html
@@ -5,7 +5,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="js/lib/isotope.css">
+    <link rel="stylesheet" href="js/lib/resultList.css">
     <!--<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>-->
     <title></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -33,12 +33,12 @@ and open the template in the editor.
 
     </div>
 
-    <!--Sorting-->
-    <div id="eexcess-isotope-sorts">
-        <button class="eexcess-isotope-button is-checked" data-sort-value="original-order">original order</button>
-        <button class="eexcess-isotope-button" data-sort-value="itemTitle">title</button>
-        <!--<button class="eexcess-isotope-button" data-sort-value="date">date</button>-->
-    </div>
+    <!--Sorting DISABLED-->
+    <!--<div id="eexcess-isotope-sorts">-->
+        <!--<button class="eexcess-isotope-button is-checked" data-sort-value="original-order">original order</button>-->
+        <!--<button class="eexcess-isotope-button" data-sort-value="itemTitle">title</button>-->
+        <!--&lt;!&ndash;<button class="eexcess-isotope-button" data-sort-value="date">date</button>&ndash;&gt;-->
+    <!--</div>-->
 </div>
 
 <div class="eexcess-isotope-grid">
