added shortcut "Alt+Shift+W", for developers to use this shortcut you'll have do re-install the extension

--- a/html/help.html
+++ b/html/help.html
@@ -18,6 +18,9 @@ and open the template in the editor.
             To get access to this information you only have to activate the extension by pressing on the EEXCESS icon <img src="../media/icons/19.png" alt="EEXCESS icon" /> in the menubar
             while you write your Wikipedia article.
             Then the extension gets started. That the extension is running is indicated by a 'on'-flag on the EEXCESS icon and its sidebar displayed to the right of the article editor.
+            Alternatively, you can trigger the extension using the shortcut "Alt+Shift+W" for all major operating
+            systems. If the shortcut doesn't work for you, you can change it using the shortcut configuration offered
+            in your extensions overview.
         </p>
 
         <h2>Search Query Submitting</h2>
