moved logging to extra file loggingCalls

--- a/visualization-widgets/SearchResultListVis/index.html
+++ b/visualization-widgets/SearchResultListVis/index.html
@@ -96,6 +96,7 @@ and open the template in the editor.
 <script src="js/inputListener.js"></script>
 <script src="js/msgListeners.js"></script>
 <script src="js/logging.js"></script>
+<script src="js/loggingCalls.js"></script>
 <script src="js/helperMethods.js"></script>
 
 <script src="js/lib/imagesloaded.pkgd.min.js"></script>
