options button under searchbar added

--- a/visualization-widgets/SearchResultListVis/index.html
+++ b/visualization-widgets/SearchResultListVis/index.html
@@ -59,6 +59,10 @@ and open the template in the editor.
         <input id="submit" type="submit" value="submit" />
     </form>
 
+    <button type="button" title="Settings" class="settings-btn">
+        <img src="../../media/icons/settings.png" />
+    </button>
+
     <!--Filtering-->
     <div id="eexcess-isotope-filtering-and-sorting" class="eexcess-isotope-button-group" style="display:none">
         <div id="eexcess-isotope-filters"></div>
