auto-query option added to options dialog

--- a/html/options.html
+++ b/html/options.html
@@ -11,6 +11,7 @@
             <h1>General Settings</h1>
             <ul>
                 <li><input id="numResults" type="number" /> <label for="numResults">Number of results [0-100]</label><br /></li>
+                <li><input id="autoQuery" type="checkbox" /> <label for="autoQuery">Auto-query results by pressing [ENTER]</label></li>
                 <li><input id="notification_bubble" type="checkbox" /> <label for="notification_bubble">Show notification bubble</label></li>
             </ul>
         </div>
