--- a/visualization-widgets/SearchResultListVis/index.html
+++ b/visualization-widgets/SearchResultListVis/index.html
@@ -59,13 +59,17 @@ and open the template in the editor.
         <input id="submit" type="submit" value="submit" />
     </form>
 
+    <div data-filter-group="licence">
+        <button class="fa fa-filter licence-filter-btn" type="button" title="enable licence whitelist-filter" data-filter="whitelistFilter" />
+    </div>
+
     <button type="button" title="Settings" class="settings-btn">
         <img src="../../media/icons/settings.png" />
     </button>
 
     <!--Filtering-->
     <div id="eexcess-isotope-filtering-and-sorting" class="eexcess-isotope-button-group" style="display:none">
-        <div id="eexcess-isotope-filters"></div>
+        <div id="eexcess-isotope-filters" data-filter-group="mediaType"></div>
 
         <!--Sorting DISABLED-->
         <!--<div id="eexcess-isotope-sorts">-->
