whitelist filter functionality implemented and tested

--- a/visualization-widgets/SearchResultListVis/index.html
+++ b/visualization-widgets/SearchResultListVis/index.html
@@ -41,7 +41,8 @@ and open the template in the editor.
 
         .wiki-content {
             position: absolute;
-            top: 64px;
+            top: 98px;
+            /*top: 64px;*/
             bottom: 0;
             width: auto;
             overflow-y: auto;
