whitelist filter options dialog functionality added

--- a/visualization-widgets/SearchResultListVis/index.html
+++ b/visualization-widgets/SearchResultListVis/index.html
@@ -61,10 +61,13 @@ and open the template in the editor.
     </form>
 
     <div data-filter-group="licence">
-        <button class="fa fa-filter licence-filter-btn" type="button" title="enable licence whitelist-filter" data-filter="whitelistFilter" />
+        <button id="licence-filter-btn" class="fa fa-filter" type="button" title="enable licence whitelist-filter" data-filter="whitelistFilter" />
+        <button id="licence-settings-btn" type="button" title="Settings" class="settings-btn">
+            <img src="../../media/icons/settings.png" />
+        </button>
     </div>
 
-    <button type="button" title="Settings" class="settings-btn">
+    <button id="settings-btn" type="button" title="Settings" class="settings-btn">
         <img src="../../media/icons/settings.png" />
     </button>
 
